--- a/recipe_app/generator/templates/generator/previews.html
+++ b/recipe_app/generator/templates/generator/previews.html
@@ -11,7 +11,7 @@
 <div class="row-wrapper section-row" style="margin-top: 0;">
     <div class="row-content">
         <div class="widget">
-            <span style="font-weight: 600; font-size: 2rem;">What you think?</span>
+            <span style="font-weight: 600; font-size: 2rem;">What do you think?</span>
         </div>
     </div>
 </div>
