--- a/recipe_app/generator/templates/generator/index.html
+++ b/recipe_app/generator/templates/generator/index.html
@@ -26,7 +26,7 @@
     <div class="row-wrapper section-row">
         <div class="row-content">
             <div class="widget">
-                <img src="{% static 'generator/img/carmy-waiting.png' %}" style="width: 600px; height: auto"/>
+                <img src="{% static 'generator/img/carmy-waiting.png' %}" style="width: 300px; height: auto"/>
             </div>
         </div>
     </div>
@@ -35,7 +35,7 @@
         <div class="row-content">
             <div class="widget">
                 <div class="initial-prompt-heading">
-                    What you got for me, chef?
+                    <p>What you got for me, chef?</p>
                 </div>
             </div>
         </div>
