--- a/recipe_app/generator/templates/generator/recipe.html
+++ b/recipe_app/generator/templates/generator/recipe.html
@@ -15,41 +15,55 @@
             <div class="recipe-title">
                 <span>{{ recipe.title }}</span>
             </div>
+            <div class="recipe-description">
+                <span>{{ recipe.description }}</span>
+            </div>
             <div class="recipe-pad-row">
-                <div><span style="font-size: 1.2rem; font-weight: 300; break-inside: avoid;">{{ recipe.description }}</span></div>
                 <div class="recipe-difficulty recipe-difficulty-{{ recipe.difficulty|lower }}">{{ recipe.difficulty }}</div>
                 <div class="recipe-time"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-timer"><line x1="10" x2="14" y1="2" y2="2"/><line x1="12" x2="15" y1="14" y2="11"/><circle cx="12" cy="14" r="8"/></svg> {{ recipe.time.total }}</div>
-                <div><span style="font-size: 1.2rem;">Persons: {{ recipe.number_of_persons }}</span></div>
-                <div style="break-inside: avoid;">
-                    <div class="main-ingredients"><span style="font-weight: 400">Main ingredients:</span><br>
-                        <span>
-                            {{ recipe.main_ingredients|join:", " }}
-                        </span>
-                    </div>
-                    <div class="additional-ingredients"><span style="font-weight: 400">Additional ingredients:</span><br>
-                        <span>
-                            {{ recipe.additional_ingredients|join:", " }}
-                        </span>
-                    </div>
-                </div>
+                <div class="recipe-time"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-utensils"><path d="M3 2v7c0 1.1.9 2 2 2h4a2 2 0 0 0 2-2V2"/><path d="M7 2v20"/><path d="M21 15V2a5 5 0 0 0-5 5v6c0 1.1.9 2 2 2h3Zm0 0v7"/></svg> {{ recipe.servings }} servings</div>
             </div>
             <div class="recipe-pad-row">
-                <div class="recipe-instructions">
-                    <ol style="overflow-wrap: break-word; padding-left: 30px;">
-                        {% for step, substeps in recipe.instructions.items %}
-                            <li style="font-weight: 400; margin-bottom: 1rem;">{{ step }}</li>
-                        <ul>
-                            {% for substep in substeps %}
-                                <li style="margin-bottom: 1rem; break-inside: avoid;">{{ substep }}</li>
+                <div class="recipe-pad-content">
+                    <div>
+                        <div class="main-ingredients"><span style="font-weight: 400">Main ingredients:</span><br>
+                            <ul style="overflow-wrap: break-word; padding-left: 1rem;">
+                                {% for ingredient in recipe.main_ingredients %}
+                                <li style="margin-top: 0.5rem;"> {{ ingredient }} </li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                        <div class="additional-ingredients"><span style="font-weight: 400">Additional ingredients:</span><br>
+                            <ul style="overflow-wrap: break-word; padding-left: 1rem;">
+                                {% for ingredient in recipe.additional_ingredients %}
+                                <li style="margin-top: 0.5rem;"> {{ ingredient }} </li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="tips-container"><span style="font-weight: 400">Tips:</span>
+                        <ul style="overflow-wrap: break-word; padding-left: 2rem; list-style-type: disc">
+                            {% for tip in recipe.tips %}
+                                <li style="margin-top: 0.5rem;">{{ tip }}</li>
                             {% endfor %}
                         </ul>
-                        {% endfor %}
-                    </ol>
+                    </div>
+                    <div class="storage-container"><span style="font-weight: 400">Storage:</span>
+                        <p style="margin-top: 0.5rem;">{{ recipe.storage }}</p>
+                    </div>
                 </div>
-            </div>
-            <div class="recipe-pad-row">
-                <span>{{ recipe.tips }}</span>
-                <span>{{ recipe.storage }}</span>
+                <div class="recipe-pad-content">
+                    <div class="recipe-instructions">
+                        <ol style="overflow-wrap: break-word; padding-left: 30px;">
+                            {% for headline, paragraph  in recipe.instructions.items %}
+                                <div style="break-inside: avoid">
+                                    <li style="font-weight: 400; margin-bottom: 0.3rem;">{{ headline }}</li>
+                                    <p style="margin-bottom: 1.2rem;">{{ paragraph }}</p>
+                                </div>
+                            {% endfor %}
+                        </ol>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
