--- a/recipe_app/generator/templates/generator/previews.html
+++ b/recipe_app/generator/templates/generator/previews.html
@@ -20,33 +20,39 @@
     <div class="row-content">
         {% for preview in recipe_previews %}
         
-        <a>
-            <div class="widget card">
-                <div class="card-recipe-container">
-                    <div class="recipe-properties-container">
-                        <div class="recipe-difficulty recipe-difficulty-{{ preview.difficulty|lower }}">{{ preview.difficulty }}</div>
-                        <div class="recipe-time"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-timer"><line x1="10" x2="14" y1="2" y2="2"/><line x1="12" x2="15" y1="14" y2="11"/><circle cx="12" cy="14" r="8"/></svg> {{ preview.time}}</div>
-                    </div>
-                    <div class="title">{{ preview.title }}</div>
-                    <div class="description">{{ preview.description }}</div>
-                    <div class="main-ingredients"><span style="font-weight: 400">Main ingredients:</span><br>
-                        <span>
-                            {{ preview.main_ingredients|join:", " }}
-                        </span>
-                    </div>
-                    <div class="additional-ingredients"><span style="font-weight: 400">Additional ingredients:</span><br>
-                        <span>
-                            {{ preview.additional_ingredients|join:", " }}
-                        </span>
-                    </div>
-                    <div class="card-btn-container">
-                        <div class="btn card-btn">
-                            Let's do this!
+        <form method="post" action="{% url 'generator:recipe' %}">
+            {% csrf_token %}
+            {% for key, value in preview.items %}
+                <input type="hidden" name="{{ key }}" value="{{ value }}">
+            {% endfor %}
+            <button type="submit">
+                <div class="widget card">
+                    <div class="card-recipe-container">
+                        <div class="recipe-properties-container">
+                            <div class="recipe-difficulty recipe-difficulty-{{ preview.difficulty|lower }}">{{ preview.difficulty }}</div>
+                            <div class="recipe-time"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-timer"><line x1="10" x2="14" y1="2" y2="2"/><line x1="12" x2="15" y1="14" y2="11"/><circle cx="12" cy="14" r="8"/></svg> {{ preview.time}}</div>
+                        </div>
+                        <div class="title">{{ preview.title }}</div>
+                        <div class="description">{{ preview.description }}</div>
+                        <div class="main-ingredients"><span style="font-weight: 400">Main ingredients:</span><br>
+                            <span>
+                                {{ preview.main_ingredients|join:", " }}
+                            </span>
+                        </div>
+                        <div class="additional-ingredients"><span style="font-weight: 400">Additional ingredients:</span><br>
+                            <span>
+                                {{ preview.additional_ingredients|join:", " }}
+                            </span>
+                        </div>
+                        <div class="card-btn-container">
+                            <div class="btn card-btn">
+                                Let's do this!
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </a>
+            </button>
+        </form>
         {% endfor %} 
     </div>
 </div>
