--- a/recipe_app/generator/templates/generator/recipe.html
+++ b/recipe_app/generator/templates/generator/recipe.html
@@ -16,12 +16,12 @@
                 <span>{{ recipe.title }}</span>
             </div>
             <div class="recipe-description">
-                <span>{{ recipe.description }}</span>
+                <div style="max-width: 500px; text-align: center"><span>{{ recipe.description }}</span></div>
             </div>
             <div class="recipe-pad-row">
                 <div class="recipe-difficulty recipe-difficulty-{{ recipe.difficulty|lower }}">{{ recipe.difficulty }}</div>
                 <div class="recipe-time"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-timer"><line x1="10" x2="14" y1="2" y2="2"/><line x1="12" x2="15" y1="14" y2="11"/><circle cx="12" cy="14" r="8"/></svg> {{ recipe.time.total }}</div>
-                <div class="recipe-time"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-utensils"><path d="M3 2v7c0 1.1.9 2 2 2h4a2 2 0 0 0 2-2V2"/><path d="M7 2v20"/><path d="M21 15V2a5 5 0 0 0-5 5v6c0 1.1.9 2 2 2h3Zm0 0v7"/></svg> {{ recipe.servings }} servings</div>
+                <div class="recipe-servings"> {{ recipe.servings }} Servings</div>
             </div>
             <div class="recipe-pad-row">
                 <div class="recipe-pad-content">
@@ -41,14 +41,14 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="tips-container"><span style="font-weight: 400">Tips:</span>
+                    <div class="tips-container hide-mobile"><span style="font-weight: 400">Tips:</span>
                         <ul style="overflow-wrap: break-word; padding-left: 2rem; list-style-type: disc">
                             {% for tip in recipe.tips %}
                                 <li style="margin-top: 0.5rem;">{{ tip }}</li>
                             {% endfor %}
                         </ul>
                     </div>
-                    <div class="storage-container"><span style="font-weight: 400">Storage:</span>
+                    <div class="storage-container hide-mobile"><span style="font-weight: 400">Storage:</span>
                         <p style="margin-top: 0.5rem;">{{ recipe.storage }}</p>
                     </div>
                 </div>
