--- a/recipe_app/generator/templates/generator/index.html
+++ b/recipe_app/generator/templates/generator/index.html
@@ -19,7 +19,7 @@
                 </div>
             </div>
         </div>
-        <p style="font-weight: 600; font-size: 2rem;">Ok, I got this!</p>
+        <p style="font-weight: 600; font-size: 2rem;">Ok, let me think ...</p>
         <div class="spinner"></div>
     </div>
 
