--- a/recipe_app/generator/templates/generator/previews.html
+++ b/recipe_app/generator/templates/generator/previews.html
@@ -12,7 +12,7 @@
 <div class="row-wrapper section-row" style="margin-top: 0;">
     <div class="row-content">
         <div class="widget">
-            <span style="font-weight: 600; font-size: 2rem;">What about on of these?</span>
+            <span style="font-weight: 600; font-size: 2rem;">What about one of these?</span>
         </div>
     </div>
 </div>
