added typewriter effect to prompt heading

--- a/recipe_app/generator/templates/generator/index.html
+++ b/recipe_app/generator/templates/generator/index.html
@@ -26,7 +26,7 @@
     <div class="row-wrapper section-row">
         <div class="row-content">
             <div class="widget">
-                <img src="{% static 'generator/img/carmy-waiting.png' %}" style="width: 300px; height: auto"/>
+                <img src="{% static 'generator/img/comic-chef-rabbit-waiting-1.png' %}" style="width: 300px; height: auto"/>
             </div>
         </div>
     </div>
@@ -34,8 +34,8 @@
     <div class="row-wrapper">
         <div class="row-content">
             <div class="widget">
-                <div class="initial-prompt-heading">
-                    <p>What you got for me, chef?</p>
+                <div class="initial-prompt-heading typewriter">
+                    <p>&thinsp;What you got for me, chef?&thinsp;</p>
                 </div>
             </div>
         </div>
