--- a/recipe_app/generator/templates/generator/previews.html
+++ b/recipe_app/generator/templates/generator/previews.html
@@ -18,14 +18,14 @@
 </div>
 
 <div id="loading-spinner" class="spinner-overlay" style="display: none;">
-    <div class="row-wrapper section-row">
+    <div class="row-wrapper section-row" style="display: none;">
         <div class="row-content">
             <div class="widget">
                 <img src="{% static 'generator/img/sidney-sceptical.png' %}" style="width: 400px; height: auto"/>
             </div>
         </div>
     </div>
-    <p style="font-weight: 600; font-size: 2rem;">Interesting ...</p>
+    <p style="font-weight: 600; font-size: 2rem;">Crafting final recipe ...</p>
     <div class="spinner"></div>
 </div>
 
