--- a/recipe_app/generator/templates/generator/recipe.html
+++ b/recipe_app/generator/templates/generator/recipe.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="recipe-pad-content">
                     <div class="recipe-instructions">
-                        <ol style="overflow-wrap: break-word; padding-left: 30px;">
+                        <ol style="overflow-wrap: break-word; padding-left: 1.2rem;">
                             {% for headline, paragraph  in recipe.instructions.items %}
                                 <div style="break-inside: avoid">
                                     <li style="font-weight: 400; margin-bottom: 0.3rem;">{{ headline }}</li>
