--- a/recipe_app/recipes/templates/recipes/index.html
+++ b/recipe_app/recipes/templates/recipes/index.html
@@ -15,7 +15,7 @@
         <div class="row-wrapper section-row" style="display: none;">
             <div class="row-content">
                 <div class="widget">
-                    <img src="{% static 'generator/img/carmy-writing.png' %}" style="width: 600px; height: auto"/>
+                    <img src="{% static 'recipes/img/carmy-writing.png' %}" style="width: 600px; height: auto"/>
                 </div>
             </div>
         </div>
@@ -27,13 +27,13 @@
         <div class="row-content">
             <div class="character-container" style="position: relative;">
                 <div class="shadow-container">
-                    <img src="{% static 'generator/img/ghibli-shadow.svg' %}"/>
+                    <img src="{% static 'recipes/img/ghibli-shadow.svg' %}"/>
                 </div>
                 <div class="body-container">
-                    <img src="{% static 'generator/img/ghibli-empty-eyes.svg' %}"/>
+                    <img src="{% static 'recipes/img/ghibli-empty-eyes.svg' %}"/>
                 </div>
                 <div class="pupils-container">
-                    <img id="pupils" src="{% static 'generator/img/ghibli-pupils.svg' %}"/>
+                    <img id="pupils" src="{% static 'recipes/img/ghibli-pupils.svg' %}"/>
                 </div>
             </div>
         </div>
@@ -52,7 +52,7 @@
     <div class="row-wrapper section-row">
         <div class="row-content">
             <div class="widget">
-                <form id="initial-prompt-form" class="searchbar" method="post" action="{% url 'generator:previews' %}">
+                <form id="initial-prompt-form" class="searchbar" method="post" action="{% url 'recipes:previews' %}">
                     {% csrf_token %}
                     <input class="searchbar-input" style="border: 0;" type="text" id="ingredients-input" name="ingredients-input" placeholder="broccoli, pasta, parmesan">
                     <button type="submit" class="searchbar-button">
