--- a/recipe_app/recipes/templates/recipes/previews.html
+++ b/recipe_app/recipes/templates/recipes/previews.html
@@ -18,13 +18,6 @@
 </div>
 
 <div id="loading-spinner" class="spinner-overlay" style="display: none;">
-    <div class="row-wrapper section-row" style="display: none;">
-        <div class="row-content">
-            <div class="widget">
-                <img src="{% static 'recipes/img/sidney-sceptical.png' %}" style="width: 400px; height: auto"/>
-            </div>
-        </div>
-    </div>
     <p style="font-weight: 600; font-size: 2rem;">Crafting final recipe ...</p>
     <div class="spinner"></div>
 </div>
@@ -42,17 +35,23 @@
                 <div class="widget card">
                     <div class="card-recipe-container">
                         <div class="recipe-properties-container">
-                            <div class="recipe-difficulty recipe-difficulty-{{ preview.difficulty|lower }}">{{ preview.difficulty }}</div>
+                            <div class="recipe-difficulty recipe-difficulty-{{ preview.difficulty }}">
+                                {% for value, label in difficulty_choices %}
+                                    {% if value == preview.difficulty %}
+                                        {{ label }}
+                                    {% endif %}
+                                {% endfor %}
+                            </div>
                             <div class="recipe-time"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-timer"><line x1="10" x2="14" y1="2" y2="2"/><line x1="12" x2="15" y1="14" y2="11"/><circle cx="12" cy="14" r="8"/></svg> {{ preview.time}}</div>
                         </div>
                         <div class="title">{{ preview.title }}</div>
                         <div class="description">{{ preview.description }}</div>
-                        <div class="main-ingredients"><span style="font-weight: 400">Main ingredients:</span><br>
+                        <div class="main-ingredients"><span style="font-weight: 400">Hauptzutaten:</span><br>
                             <span>
                                 {{ preview.main_ingredients|join:", " }}
                             </span>
                         </div>
-                        <div class="additional-ingredients"><span style="font-weight: 400">Additional ingredients:</span><br>
+                        <div class="additional-ingredients"><span style="font-weight: 400">Weitere Zutaten:</span><br>
                             <span>
                                 {{ preview.additional_ingredients|join:", " }}
                             </span>
