--- a/recipe_app/recipes/templates/recipes/recipe-generated.html
+++ b/recipe_app/recipes/templates/recipes/recipe-generated.html
@@ -19,21 +19,27 @@
                 <div style="max-width: 500px; text-align: center"><span>{{ recipe.description }}</span></div>
             </div>
             <div class="recipe-pad-row">
-                <div class="recipe-difficulty recipe-difficulty-{{ recipe.difficulty|lower }}">{{ recipe.difficulty }}</div>
-                <div class="recipe-time"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-timer"><line x1="10" x2="14" y1="2" y2="2"/><line x1="12" x2="15" y1="14" y2="11"/><circle cx="12" cy="14" r="8"/></svg> {{ recipe.time.total }} Min.</div>
-                <div class="recipe-servings"> {{ recipe.servings }} Servings</div>
+                <div class="recipe-difficulty recipe-difficulty-{{ recipe.difficulty }}">
+                    {% for value, label in difficulty_choices %}
+                        {% if value == recipe.difficulty %}
+                            {{ label }}
+                        {% endif %}
+                    {% endfor %}
+                </div>
+                <div class="recipe-time"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-timer"><line x1="10" x2="14" y1="2" y2="2"/><line x1="12" x2="15" y1="14" y2="11"/><circle cx="12" cy="14" r="8"/></svg> {{ recipe.time.active }} / {{ recipe.time.inactive}} Min.</div>
+                <div class="recipe-servings"> {{ recipe.servings }} Portionen</div>
             </div>
             <div class="recipe-pad-row">
                 <div class="recipe-pad-content">
                     <div>
-                        <div class="main-ingredients"><span style="font-weight: 400">Main ingredients:</span><br>
+                        <div class="main-ingredients"><span style="font-weight: 400">Hauptzutaten:</span><br>
                             <ul style="overflow-wrap: break-word; padding-left: 1rem;">
                                 {% for ingredient in recipe.main_ingredients %}
                                 <li style="margin-top: 0.5rem;"> {{ ingredient.amount }} {{ ingredient.unit }} {{ ingredient.name }} {{ ingredient.notes }} </li>
                                 {% endfor %}
                             </ul>
                         </div>
-                        <div class="additional-ingredients"><span style="font-weight: 400">Additional ingredients:</span><br>
+                        <div class="additional-ingredients"><span style="font-weight: 400">Weitere Zutaten:</span><br>
                             <ul style="overflow-wrap: break-word; padding-left: 1rem;">
                                 {% for ingredient in recipe.additional_ingredients %}
                                 <li style="margin-top: 0.5rem;"> {{ ingredient.amount }} {{ ingredient.unit }} {{ ingredient.name }} {{ ingredient.notes }} </li>
@@ -41,21 +47,21 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="tips-container hide-mobile"><span style="font-weight: 400">Tips:</span>
+                    <div class="tips-container hide-mobile"><span style="font-weight: 400">Tipps:</span>
                         <ul style="overflow-wrap: break-word; padding-left: 2rem; list-style-type: disc">
                             {% for tip in recipe.tips %}
                                 <li style="margin-top: 0.5rem;">{{ tip }}</li>
                             {% endfor %}
                         </ul>
                     </div>
-                    <div class="storage-container hide-mobile"><span style="font-weight: 400">Storage:</span>
+                    <div class="storage-container hide-mobile"><span style="font-weight: 400">Aufbewahrung:</span>
                         <p style="margin-top: 0.5rem;">{{ recipe.storage }}</p>
                     </div>
                 </div>
                 <div class="recipe-pad-content">
                     <div class="recipe-instructions">
                         <ol style="overflow-wrap: break-word; padding-left: 1.2rem;">
-                            {% for headline, paragraph  in recipe.instructions.items %}
+                            {% for headline, paragraph in recipe.instructions.items %}
                                 <div style="break-inside: avoid">
                                     <li style="font-weight: 400; margin-bottom: 0.3rem;">{{ headline }}</li>
                                     <p style="margin-bottom: 1.2rem;">{{ paragraph }}</p>
