--- a/recipe_app/recipes/templates/recipes/index.html
+++ b/recipe_app/recipes/templates/recipes/index.html
@@ -12,7 +12,7 @@
 <div style="height: 80vh; display: flex; align-items: center; justify-content: center; flex-direction: column;">
 
     <div id="loading-spinner" class="spinner-overlay" style="display: none;">
-        <p style="font-weight: 600; font-size: 2rem;">Ok, let me think ...</p>
+        <p style="font-weight: 600; font-size: 2rem;">Erstelle Rezeptvorschläge ...</p>
         <div class="spinner"></div>
     </div>
 
