--- a/recipe_app/recipes/static/recipes/css/styles.css
+++ b/recipe_app/recipes/static/recipes/css/styles.css
@@ -11,14 +11,16 @@
     --navbar-shadow: none;
     --text-color: #333;
     --text-color-2: rgb(67, 67, 67);
-    --text-color-highlight-1: black;
-    --text-color-highlight-2: rgb(255, 64, 0);
     --transition-speed: 0.3s;
     --max-width: 1400px;
     --content-padding: 1rem 2rem;
     --content-padding-mobile: 0.5rem 1rem;
     --main-spacing: 2rem;
     --main-bg: none;
+    --accent-color: indianred;
+    --icon-color: hsl(69, 8%, 50%);
+    --bg-color: hsl(69, 8%, 83%);
+    --element-color: hsl(72, 17%, 94%);
 }
 
 @media only screen and (max-width: 499px) {
@@ -31,7 +33,25 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     min-height: 100vh;
     background-color: #d5d6cf;
+    padding-bottom: 100px;
 }
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 90px;
+    color: var(--text-color-highlight-1);
+    background-color: #F2F3EE;
+    box-shadow: rgba(102, 101, 95, 0.2) 0px -2px 20px 0px;
+}
+
+
 
 a, button {
     all: unset;
@@ -70,12 +90,19 @@ ul {
 }
 
 .navlink {
-    color: #191918;;
+    color: #191918;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.navlink svg {
+    color: hsl(69, 8%, 50%)
 }
 
 .navbar-list {
     display: inline-flex;
-    gap: clamp(1rem, 5vw, 5rem);
+    gap: clamp(2rem, 5vw, 5rem);
     list-style: none;
     font-weight: 500;
 }
@@ -151,11 +178,13 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 3rem 3rem;
+    gap: 3rem;
 }
 
-.widget {
-    background-color: none;
+@media only screen and (max-width: 499px) {
+    .row-content {
+        gap: 1.5rem;
+    }
 }
 
 .tag-list-container {
@@ -199,7 +228,7 @@ main {
 }
 
 .recipe-pad-row {
-    margin-top: 3rem;;
+    margin-top: 3rem;
     border: solid 0px indianred;
     display: flex;
     justify-content: space-between;
@@ -244,9 +273,15 @@ main {
     align-items: center;
     justify-content: left;
     flex-direction: column;
-    padding: 1.5rem;
+    padding: 1rem;
     background-color: #F2F3EE;
     box-shadow: rgba(102, 101, 95, 0.2) 0px 2px 8px 0px;
+}
+
+@media only screen and (max-width: 499px) {
+    .card {
+        width: 100%;
+    }
 }
 
 .card-recipe-container{
@@ -283,13 +318,20 @@ main {
     margin-right: 0.3rem;
 }
 
+.recipe-servings svg{
+    width: 2rem;
+    height: 2rem;
+    margin-left: 0.3rem;
+    padding-bottom: 0.35rem;
+}
+
 .recipe-difficulty {
     font-size: 1.2rem;
     display: inline-flex;
     justify-content: center;
     align-items: center;
     border-radius: 999px;
-    padding: 0.2rem 0.8rem;
+    padding: 0.2rem 0.8rem 0.3rem 0.8rem;
 }
 
 .recipe-difficulty-1 {
@@ -298,14 +340,26 @@ main {
 }
 
 .recipe-difficulty-2 {
+    background-color: rgb(219 234 254);
+    color: rgb(30 58 138);
+}
+
+.recipe-difficulty-3 {
+    background-color: rgb(243 232 255);
+    color: rgb(59 7 100);
+}
+
+.recipe-difficulty-4 {
     background-color: rgb(254 249 195);
     color: rgb(133 77 14);
 }
 
-.recipe-difficulty-3 {
-    background-color: rgb(254 226 226);;
+.recipe-difficulty-5 {
+    background-color: rgb(254 226 226);
     color: rgb(153 27 27);
 }
+
+
 
 .title {
     font-size: 1.5rem;
