--- a/recipe_app/recipes/templates/recipes/detail.html
+++ b/recipe_app/recipes/templates/recipes/detail.html
@@ -22,7 +22,13 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-timer"><line x1="10" x2="14" y1="2" y2="2"/><line x1="12" x2="15" y1="14" y2="11"/><circle cx="12" cy="14" r="8"/></svg>
                     {{ recipe.time_total|time_converter }}
                 </div>
-                <div class="recipe-servings"> {{ recipe.default_servings }} Portionen</div>
+                <div class="recipe-servings">
+                    {{ recipe.default_servings }}
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 15" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M12 15a9 9 0 0 0 9-9H3a9 9 0 0 0 9 9Z"/>
+                        <path d="M7 15h10"/>
+                    </svg>
+                </div>
             </div>
             <div class="recipe-pad-row">
                 <div class="recipe-pad-content">
