--- a/recipe_app/recipes/templates/recipes/layout.html
+++ b/recipe_app/recipes/templates/recipes/layout.html
@@ -27,14 +27,6 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chef-hat"><path d="M17 21a1 1 0 0 0 1-1v-5.35c0-.457.316-.844.727-1.041a4 4 0 0 0-2.134-7.589 5 5 0 0 0-9.186 0 4 4 0 0 0-2.134 7.588c.411.198.727.585.727 1.041V20a1 1 0 0 0 1 1Z"/><path d="M6 17h12"/></svg>
                 ChatRCP
             </a>
-            <div class="navbar-list">
-                <div class="navlink">
-                    <a href="{% url 'recipes:generate' %}">Generate</a>
-                </div>
-                <div class="navlink">
-                    <a href="{% url 'recipes:list' %}">Browse</a>
-                </div>
-            </div>
             <div>
                 <button id="login-button" class="btn login-btn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-user"><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>Login</button>
             </div>
@@ -49,6 +41,18 @@
 
     <footer>
         <!-- Footer content -->
+        <nav class="navbar">
+            <div class="navbar-list">
+                <div class="navlink">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-plus"><path d="M5 12h14"/><path d="M12 5v14"/></svg>
+                    <a href="{% url 'recipes:generate' %}">Neues Rezept</a>
+                </div>
+                <div class="navlink">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-library"><path d="m16 6 4 14"/><path d="M12 6v14"/><path d="M8 8v12"/><path d="M4 4v16"/></svg>
+                    <a href="{% url 'recipes:list' %}">Bibliothek</a>
+                </div>
+            </div>
+        </nav>
     </footer>
 
 </body>
