--- a/recipe_app/recipes/templates/recipes/previews.html
+++ b/recipe_app/recipes/templates/recipes/previews.html
@@ -12,13 +12,13 @@
 <div class="row-wrapper section-row" style="margin-top: 0;">
     <div class="row-content">
         <div class="widget">
-            <span style="font-weight: 600; font-size: 2rem;">What about one of these?</span>
+            <span style="font-weight: 600; font-size: 2rem;">Wie wäre es hiermit?</span>
         </div>
     </div>
 </div>
 
 <div id="loading-spinner" class="spinner-overlay" style="display: none;">
-    <p style="font-weight: 600; font-size: 2rem;">Crafting final recipe ...</p>
+    <p style="font-weight: 600; font-size: 2rem;">Erstelle vollständiges Rezept ...</p>
     <div class="spinner"></div>
 </div>
 
